Lower the Pest version requirement to 1.0+

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "technically/array-container": "^2.0"
     },
     "require-dev": {
-        "pestphp/pest": "^3.0"
+        "pestphp/pest": "^1.0|^2.0|^3.0"
     },
     "license": "MIT",
     "autoload": {
